# Copyright 2021 The AutoCore.AI.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
  "autoware_auto",
  "common",
  "zenoh_flow_global_planner",
  "zenoh_flow_goal_pose",
  "zenoh_flow_init_pose",
  "zenoh_flow_lane_planner",
  "zenoh_flow_local_planner",
  "zenoh_flow_osm_map_loader",
  "zenoh_flow_parking_planner",
  "zenoh_flow_pcd_map_loader",
  "zenoh_flow_pure_pursuit",
  "zenoh_flow_simulator",
  "zenoh_flow_system_monitor",
  "zenoh_flow_tick_source",
]
