<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zenoh_flow_autoware</name>
  <version>0.0.0</version>
  <description>zenoh_flow_autoware</description>
  <maintainer email="rongjie.duan@autocore.ai">Duan RongJie</maintainer>
  <maintainer email="mintao.shen@autocore.ai">Shen MinTao</maintainer>
  <maintainer email="luxiang.zhou@autocore.ai">Zhou LuXiang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_auto_msgs</depend>
  <depend>lanelet2_map_provider</depend>
  <depend>ndt_nodes</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
