[package]
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = {git = "https://github.com/autocore-ai/cxx.git", branch = "autocore-dev"}
serde = {version = "*", features = ["derive"]}
zenoh-flow = {git = "https://github.com/autocore-ai/zenoh-flow.git", branch = "autocore-dev"}
